Changes: - Added helm charts for secret-license - Optimized Sentrilite/trace_events - Updated main.html

--- a/sys.conf
+++ b/sys.conf
@@ -1,5 +1,5 @@
 IFACE=enx0
-LICENSE_KEY=./license.key
+LICENSE_KEY=./charts/sentrilite/files/license.key
 SIEM=""
 PAGERDUTY_EVENTS_URL=""
 PAGERDUTY_ROUTING_KEY=""
