--- a/sys.conf
+++ b/sys.conf
@@ -1,5 +1,5 @@
 IFACE=enx0
-LICENSE_KEY=./charts/sentrilite/files/license.key
+LICENSE_KEY=./license.key
 SIEM=""
 PAGERDUTY_EVENTS_URL=""
 PAGERDUTY_ROUTING_KEY=""
